# advent_of_code_2023

./: .gitignore  CMakeLists.txt
src/: CMakeLists.txt  aoc23.17.cpp  aoc23.17.h  main.cpp
test/: CMakeLists.txt  test_23.17.cpp  testmain.cpp
